--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -25,7 +25,42 @@
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
     
-    <p> HELLO </p>
+  <div  class="contact" id="contact">
+	<div class="contact-content">
+		<div class="container">
+
+			<div class=" col-md-6 address">	
+				<div class="contact-icons">
+											<ul>
+
+												<li><a href="/hoursandmap"><span class="fa fa-home fa-4x"> </span>Lorem ipsy street,Newyork138</a></li>
+												<li><a class="mail" href="mailto:info@example.com"><span class="fa fa-envelope fa-3x"> </span>123 int@example.com</a></li>
+												<li><a class="phone" href="tel:1-234-567-8901"><span class="fa fa-phone fa-4x"> </span>Tel:1(234) 567-8901</a></li>
+												<div class="clearfix"> </div>
+											</ul>
+										
+										</div>
+			</div>
+			<div class="col-md-6 contact-part">
+ 				 <div class="form">				
+				  			<form method="post" action="#">
+							    	<input type="text" class="textbox form-control" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name ';}">
+							    	<input type="text" class="textbox form-control" value="Email Address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email Address';}">
+							    	<input type="text" class="textbox form-control" value="Subject" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Subject';}">
+										<div class="clearfix"> </div>
+								    <div>
+								    	<textarea value="Message:" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Your Message ';}">Your Message</textarea>
+								    </div>	
+								   <div> 
+								    	<button class="btn btn-success btn-lg" type="submit" value="Submit ">Submit</button>
+                   </div>
+							</form>
+						</div>
+ 					</div>	
+ 				<div class="clear"> </div>
+ 			</div>	
+	</div> 			
+</div>	
 
   	</div>
 	
