--- a/views/crm/appointments/edit.ejs
+++ b/views/crm/appointments/edit.ejs
@@ -1,4 +1,4 @@
-<% include ../adminLayout %>
+<% include ../../crmLayout %>
 
 <div class="panel panel-info">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
@@ -19,7 +19,6 @@
       <div class="col-sm-12">
         <div class="alert alert-success" ng-show="message" ng-cloak>{{message}}</div>
 	    <div class="alert alert-danger" ng-show="error" ng-cloak>{{error}}</div>
-      <flash-message duration="5000"></flash-message>
         <div class="well">
           
           <div class="row" style="margin-left: 10px;">
