--- a/views/about.ejs
+++ b/views/about.ejs
@@ -23,7 +23,23 @@
     <% if (typeof message != "undefined" && message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
-
+      <div class="about-main">
+			<div class="container">
+				<h3>SHORTLY ABOUTUS</h3>
+			<div class="main-about">
+				<div class="main-img">
+					<img src="images/ab-pic.jpg" title="" />
+				</div>
+					<div class="main-text">
+						<h4>dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit placerat fac er consectetuer adipiscing.</h4>
+						<p class="para1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummynib suspeuismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum.olore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</p><br>
+					<p class="para1">consectetuer adipiscing elit, sed diam nonummynib suspe uismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius Typi non habent claritatem insitam. sed diam nonummynib suspeuismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum.olore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit</p>
+					<a class="offer-btn" href="#"><span></span>more info</a>
+					</div>
+				<div class="clearfix"></div>
+			</div>
+			</div>
+		</div>
   	</div>
 	
   </div>
