--- a/views/admin/parts/create.ejs
+++ b/views/admin/parts/create.ejs
@@ -1,4 +1,4 @@
-<% include ../adminLayout %>
+<% include ../../adminLayout %>
 
 <div class="panel panel-info">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
