--- a/views/crm/appointments/today.ejs
+++ b/views/crm/appointments/today.ejs
@@ -1,4 +1,4 @@
-<% include ../crmLayout %>
+<% include ../../crmLayout %>
 
 <div class="panel panel-info">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
@@ -16,6 +16,9 @@
   
 
   <div class="panel-body" data-ng-app="crmAppointmentModule" data-ng-controller="crmViewAppointmentController">
+      
+      <div class="alert alert-success" ng-show="message" ng-cloak>{{message}}</div>
+     <div class="alert alert-danger" ng-show="error" ng-cloak>{{error}}</div>
 
       <div class="col-sm-12">
         <div class="well">
