--- a/views/crm/profile/edit.ejs
+++ b/views/crm/profile/edit.ejs
@@ -1,4 +1,4 @@
-<% include ../crmLayout %>
+<% include ../../crmLayout %>
 
 <div class="panel panel-info">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
