--- a/views/crm/services/start.ejs
+++ b/views/crm/services/start.ejs
@@ -1,4 +1,4 @@
-<% include ../crmLayout %>
+<% include ../../crmLayout %>
 
 <div class="panel panel-info">
   <div style="float: right; padding-top: 4px; padding-right: 15px;">
@@ -18,11 +18,11 @@
     <% if (typeof message != "undefined" && message.length > 0) { %>
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
-     <div class="alert alert-success" ng-show="message" ng-cloak>{{message}}</div>
-     <div class="alert alert-danger" ng-show="error" ng-cloak>{{error}}</div>
-
-
+    
   <div class="panel-body" data-ng-app="crmServiceModule" data-ng-controller="crmStartServiceController" >
+  
+    <div class="alert alert-success" ng-show="message" ng-cloak>{{message}}</div>
+     <div class="alert alert-danger" ng-show="error" ng-cloak>{{error}}</div>
 
       <div class="col-sm-12">
         <div class="well">            
