--- a/views/hoursandmap.ejs
+++ b/views/hoursandmap.ejs
@@ -40,7 +40,9 @@
 				<div class="col-md-6">
 					<h3><span class="fa fa-map">  Maps</h3>
 					<br />
+					<div class="map">
 					<iframe width="500" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJLX2exqIPyIkRXmWz1aR-K6I&key=AIzaSyCc-O4BAlkPlieOJYfB2ovpHxEMu27ajPA" allowfullscreen></iframe>
+					</div>
 				</div>
 				
 			</div>
