--- a/views/profile/vehicles.ejs
+++ b/views/profile/vehicles.ejs
@@ -1,6 +1,11 @@
 <% include ../layout %>
 
 <div class="panel panel-info">
+  <div style="float: right; padding-top: 4px; padding-right: 15px;">
+    <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+    <a href="/profile/index" class="btn btn-default btn-sm">Back To Profile</a>
+  </div>
+  <div class="clear"></div>
   <div class="panel-heading">
     <h3 class="panel-title"><%=title %></h3>
   </div>
