fixed footer and fa icons

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -28,14 +28,20 @@
 				<h3>SHORTLY ABOUTUS</h3>
 			<div class="main-about">
 				<div class="main-img">
-					<img src="images/ab-pic.jpg" title="" />
+					<img src="images/ab-pic.jpg" title="" style="width: 100%;" />
 				</div>
+        <br />
 					<div class="main-text">
-						<h4>dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit placerat fac er consectetuer adipiscing.</h4>
-						<p class="para1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummynib suspeuismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum.olore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.</p><br>
-					<p class="para1">consectetuer adipiscing elit, sed diam nonummynib suspe uismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius Typi non habent claritatem insitam. sed diam nonummynib suspeuismod tincidunt ut laoreet dolore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit, sed diam nonummynib suspepossim assum.olore magna aliquam lectores legere me lius  placerat fac er consectetuer adipiscing elit</p>
-					<a class="offer-btn" href="#"><span></span>more info</a>
-					</div>
+            <p class="para1">Since 1975, Angel's Auto Repair Shop has been serving the  community with  auto repair and auto repairs in  at our shop. Mechanics on duty use the most advanced diagnostic tools to locate the source of your problem faster. All services for auto repairs in  are backed 100%.</p>
+
+            <p class="para1">Our customers have been coming back to us for over 37 years because Angel's Auto Repair Shop offers honest service at affordable prices.</p>
+
+            <p class="para1">For over three decades our shop has been providing auto repairs for cars, pickups and diesel engine vehicles. We have reliable services for general mechanical auto repairs.</p>
+
+            <p class="para1">Our status as a NAPA Auto Care Center means our customers can be certain we are using high-quality parts and well trained mechanics to perform their auto repairs. We do not skimp when it comes to using the most reliable parts and tools. That is why we are able to guarantee all of our repairs 100% nation wide.</p>
+
+            <p class="para1">We offer brake services as part of our auto repair services. We also do timing belt service on all makes and models. If you are looking for auto repair in the Humboldt County area, we invite you to visit our shop today. We provide honest, reliable mechanics, high-quality NAPA parts and exceptional service because we value our customers.</p>
+          </div>
 				<div class="clearfix"></div>
 			</div>
 			</div>
