--- a/views/admin/services/index.ejs
+++ b/views/admin/services/index.ejs
@@ -20,7 +20,7 @@
       <div class="col-sm-12">
         <div class="well">
             <a href="/admin/services/createService" class="btn btn-warning" style="float: right;">Create New Service</a>
-            <h3><span class="fa fa-user"></span> Services</h3>
+            <h3><span class="fa fa-wrench"></span> Services</h3>
             <div class="clear"></div>
             <div class='table-scrollable' style="max-height: 600px;">
                 <table
