--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,9 +33,9 @@
 				<div class="contact-icons">
 											<ul>
 
-												<li><a href="/hoursandmap"><span class="fa fa-home fa-4x"> </span>Lorem ipsy street,Newyork138</a></li>
+												<li><a href="/hoursandmap"><span class="fa fa-home fa-4x"> </span>5937 BELAIR ROAD, BALTIMORE, MD 21206</a></li>
 												<li><a class="mail" href="mailto:info@example.com"><span class="fa fa-envelope fa-3x"> </span>123 int@example.com</a></li>
-												<li><a class="phone" href="tel:1-234-567-8901"><span class="fa fa-phone fa-4x"> </span>Tel:1(234) 567-8901</a></li>
+												<li><a class="phone" href="tel:410-864-4731"><span class="fa fa-phone fa-4x"> </span>Tel:410.864.4731</a></li>
 												<div class="clearfix"> </div>
 											</ul>
 										
