--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 	<h3>Auto Repair Shop</h3>
 	<p>410.864.4731</p>
 	<p>5937 BELAIR ROAD BALTIMORE, MD 21206</p>
-	<a href="/">Home</a> | <a href="contact">Contact Us</a> | <a href="about">About</a> | <a href="hoursandmap">Hours and Location</a>
+	<a href="/">Home</a> | <a href="/contact">Contact Us</a> | <a href="/about">About</a> | <a href="/hoursandmap">Hours and Location</a>
     <p style="line-height:20px; vertical-align:middle;" class="text-muted">Copyright 2016</p>
   </center></div>
 </footer>
