--- a/views/admin/parts/index.ejs
+++ b/views/admin/parts/index.ejs
@@ -17,14 +17,14 @@
 
   <div class="panel-body">
 
-      <div class="col-sm-12">
+      <div class="col-sm-12" data-ng-app="adminPartModule" data-ng-controller="adminRemovePartController">
       <!-- show any messages that come back with authentication -->
         <% if (typeof message != "undefined" && message.length > 0) { %>
             <div class="alert alert-danger"><%= message %></div>
         <% } %>
         <div class="well">
             <a href="/admin/parts/createPart" class="btn btn-warning" style="float: right;">Create New part</a>
-            <h3><span class="fa fa-user"></span> Parts</h3>
+            <h3><span class="fa fa-chain"></span> Parts</h3>
             <div class="clear"></div>
             <div class='table-scrollable' style="max-height: 600px;">
                 <table
@@ -35,6 +35,7 @@
                     <td>Category</td>
                     <td>Inactive</td>
                     <td>&nbsp;</td>
+                    <td>&nbsp;</td>
                 </tr>
                 
                 <% parts.forEach(function(part) {%>
@@ -43,10 +44,15 @@
                     <td><%=part.description%></td>
                     <td><%=part.category%></td>
                     <td><%=part.deleted ? 'Yes' : 'No'%></td>
-                    <td class="info">
-                        <a href="/admin/parts/edit/<%=part.id%>" class="btn btn-default" style="width: 100%;">
+                    <td>
+                        <a href="/admin/parts/edit/<%=part.id%>" class="btn btn-info" style="width: 100%;">
                             Edit
                         </a>
+                    </td>
+                    <td>
+                        <button ng-click="markDeleted(<%=part.id%>)" class="btn btn-danger" style="width: 100%;">
+                            Remove
+                        </button>
                     </td>
                 </tr>
                 <% }) %>
@@ -61,3 +67,9 @@
 </div>
 
 <% include ../../footer %>
+
+<script src="../../../bower_components/angular/angular.min.js" type="text/javascript"></script>
+
+<script src="../../../javascripts/app/admin/part/adminPartModule.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../javascripts/app/admin/part/adminPartService.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../javascripts/app/admin/part/adminRemovePartController.js" type="text/javascript" charset="utf-8"></script>
