--- a/views/admin/prices/index.ejs
+++ b/views/admin/prices/index.ejs
@@ -20,7 +20,7 @@
       <div class="col-sm-12">
         <div class="well">
             <a href="/admin/prices/createPrice" class="btn btn-warning" style="float: right;">Create New Price</a>
-            <h3><span class="fa fa-user"></span> Prices</h3>
+            <h3><span class="fa fa-dollar"></span> Prices</h3>
             <div class="clear"></div>
             
             <div class='table-scrollable' style="min-height: 600px;">
