--- a/views/admin/rates/index.ejs
+++ b/views/admin/rates/index.ejs
@@ -23,7 +23,7 @@
       <div class="col-sm-12">
         <div class="well">
             <a href="/admin/rates/createRate" class="btn btn-warning" style="float: right;">Create New Rate</a>
-            <h3><span class="fa fa-user"></span> Rates</h3>
+            <h3><span class="fa fa-percent"></span> Rates</h3>
             <div class="clear"></div>
             
             <div class='table-scrollable' style="min-height: 600px;">
