--- a/views/admin/vehicles/index.ejs
+++ b/views/admin/vehicles/index.ejs
@@ -20,7 +20,7 @@
       <div class="col-sm-12">
         <div class="well">
             <a href="/admin/vehicles/createVehicle" class="btn btn-warning" style="float: right;">Create New Vehicle</a>
-            <h3><span class="fa fa-user"></span> Vehicles</h3>
+            <h3><span class="fa fa-car"></span> Vehicles</h3>
             <div class="clear"></div>
             
             <div class='table-scrollable' style="min-height: 600px;">
