--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@ BALTIMORE, MD 21206</p>
 			 Have I chosen the right repair company? Am I getting a fair deal? We made
 			 a pledge that the customer always comes first. We are here to answer all
 			 these questions about your automobile. We understand the need for a car
-			 service shop to be thorough, honest and customer-oriented. At EuroTech,
+			 service shop to be thorough, honest and customer-oriented. At Auto Repair Shop,
 			 our professionals will work with you to make your car run as good as new.
 			 We handle all repairs from preventative maintenance to major engine or
 			 transmission work.</p>
@@ -77,7 +77,7 @@ BALTIMORE, MD 21206</p>
 		<h4>Local experience counts.</h4>
 		<p>We know that you don&rsquo;t know what company to choose. We know that
 			 not all car service companies care about their customers. We know some
-			 are interested in fixing the car and their bottom line. Not us. EuroTech
+			 are interested in fixing the car and their bottom line. Not us. Auto Repair Shop
 			 is known throughout Baltimore for how much we care about our customers
 			 and their automobiles. We offer superior service, integrity and honesty
 			 when dealing with you the customer. We take care with each vehicle and
