--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -14,25 +14,52 @@
     <% } %>
     
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Welcome <%= user.first_name %></h1>
+        <h1><span class="fa fa-universal-access"></span> Welcome <%= user.first_name %></h1>
     </div>
 
-    <div class="row">
-
-        <!-- LOCAL INFORMATION -->
-        <div class="col-sm-12">
-            <div class="well">
-                <h3><span class="fa fa-user"></span>User Info <a href="/admin/profile/edit" class="btn btn-default btn-sm">Edit</a></h3>
-                    <p>
-                        <strong>Name</strong>: <%= user.first_name %> <%= user.last_name %><br>
-                        <strong>Email</strong>: <%= user.email %><br>
-                        <strong>Phone</strong>: <%= user.phone_number %>
-                    </p>
-
+    <div class="row" style="min-height: 500px;">
+        <div class="col-lg-12 text-center">
+            <div class="row text-center">
+            <span style="padding:20px;"><a href="/admin/services/index" class="btn btn-sq-lg btn-warning">
+                    <i class="fa fa-wrench fa-5x"></i>
+                    <br/><br/>
+                Manage <br>Services
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/parts/index" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-gears fa-5x"></i><br/><br/>
+              Manage <br>Parts
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/appointments/schedule" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-calendar fa-5x"></i><br/><br/>
+              Manage <br>Appointments
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/users/index" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-users fa-5x"></i><br/><br/>
+              Manage <br>Users
+            </a></span>
+            </div>
+            <br />
+            <div class="row text-center">
+            <span style="padding:20px;"><a href="/admin/prices/index" class="btn btn-sq-lg btn-warning">
+                    <i class="fa fa-dollar fa-5x"></i>
+                    <br/><br/>
+                Manage <br>Part Prices
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/rates/index" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-hourglass-half fa-5x"></i><br/><br/>
+              Manage <br>Service Rates
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/vehicles/index" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-car fa-5x"></i><br/><br/>
+              Manage <br>Vehicles
+            </a></span>
+            <span style="padding:20px;"><a href="/admin/profile/index" class="btn btn-sq-lg btn-warning">
+              <i class="fa fa-user fa-5x"></i><br/><br/>
+              View <br>Profile
+            </a></span>
             </div>
         </div>
-
-    </div>
+      </div>
 	
 </div>
 </div>
