--- a/views/adminLayout.ejs
+++ b/views/adminLayout.ejs
@@ -55,7 +55,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Manage Vehicles <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/admin/vehicles/index">View Vehicles</a></li>
+            <li><a href="/admin/vehicles/index">Manage Vehicles</a></li>
             <li><a href="/admin/vehicles/createVehicle">Create New Vehicle</a></li>
           </ul>
         </li>
