--- a/views/admin/services/index.ejs
+++ b/views/admin/services/index.ejs
@@ -60,3 +60,10 @@
 </div>
 
 <% include ../../footer %>
+
+
+<script src="../../../bower_components/angular/angular.min.js" type="text/javascript"></script>
+
+<script src="../../../javascripts/app/admin/service/adminServiceModule.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../javascripts/app/admin/service/adminServiceService.js" type="text/javascript" charset="utf-8"></script>
+<script src="../../../javascripts/app/admin/service/adminRemoveServiceController.js" type="text/javascript" charset="utf-8"></script>
