--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -14,7 +14,7 @@
     <% } %>
     
     <div class="page-header text-center">
-        <h1><span class="fa fa-universal-access"></span> Welcome <%= user.first_name %></h1>
+        <h1><span class="fa fa-home"></span> Welcome <%= user.first_name %></h1>
     </div>
 
     <div class="row" style="min-height: 500px;">
@@ -29,7 +29,7 @@
               <i class="fa fa-gears fa-5x"></i><br/><br/>
               Manage <br>Parts
             </a></span>
-            <span style="padding:20px;"><a href="/admin/appointments/schedule" class="btn btn-sq-lg btn-warning">
+            <span style="padding:20px;"><a href="/admin/appointments/index" class="btn btn-sq-lg btn-warning">
               <i class="fa fa-calendar fa-5x"></i><br/><br/>
               Manage <br>Appointments
             </a></span>
