--- a/views/crm/index.ejs
+++ b/views/crm/index.ejs
@@ -26,11 +26,11 @@
                     <br/><br/>
                 Today's <br>Appointment
             </a></span>
-            <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
+            <!--<span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
               <i class="fa fa-hourglass-start fa-5x"></i><br/><br/>
               Process <br>
               Walk In
-            </a></span>
+            </a></span>-->
             <span style="padding:20px;"><a href="/crm/appointments/schedule" class="btn btn-sq-lg btn-warning">
               <i class="fa fa-calendar-plus-o fa-5x"></i><br/><br/>
               Schedule <br>Appointment
@@ -42,7 +42,7 @@
             </div>
             <br />
           <div>
-            <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
+            <!--<span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
                     <i class="fa fa-search fa-5x"></i>
                     <br/><br/>
                 Customer <br>Lookup
@@ -50,8 +50,8 @@
             <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
               <i class="fa fa-users fa-5x"></i><br/><br/>
               Account <br>Lookup
-            </a></span>
-            <span style="padding:20px;"><a href="#" class="btn btn-sq-lg btn-warning">
+            </a></span>-->
+            <span style="padding:20px;"><a href="/estimate/index" class="btn btn-sq-lg btn-warning">
               <i class="fa fa-calculator fa-5x"></i><br/><br/>
               Service Estimator<br>Tool
             </a></span>
