--- a/views/profile/partials/serviceHistory.ejs
+++ b/views/profile/partials/serviceHistory.ejs
@@ -1,6 +1,6 @@
 <div class="col-sm-12">
     <div class="well">
-        <h3><span class="fa fa-user"></span> Service History</h3>
+        <h3><span class="fa fa-wrench"></span> Service History</h3>
 		<div class='table-scrollable' style="max-height: 250px;">
 			<table
 			       data-ng-show="services.length > 0"
