--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,25 @@
 <footer class="footer">
-  <div class="container"><center>
+  <div class="container">
+	<center>
 	<h3>Auto Repair Shop</h3>
 	<p>410.864.4731</p>
 	<p>5937 BELAIR ROAD BALTIMORE, MD 21206</p>
 	<a href="/">Home</a> | <a href="/contact">Contact Us</a> | <a href="/about">About</a> | <a href="/hoursandmap">Hours and Location</a>
+	<br /><br />
+		<a href="/crm/" class="btn btn-info btn-xs">Employee</a> | <a href="/admin" class="btn btn-warning btn-xs">Admin</a>
     <p style="line-height:20px; vertical-align:middle;" class="text-muted">Copyright 2016</p>
-  </center></div>
+  </center>
+	</div>
 </footer>
+
+<script>
+(function() {
+	var cx = '002266486307724081248:djzahfu5xcm';
+	var gcse = document.createElement('script');
+	gcse.type = 'text/javascript';
+	gcse.async = true;
+	gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+	var s = document.getElementsByTagName('script')[0];
+	s.parentNode.insertBefore(gcse, s);
+})();
+</script>
