--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
 	  <link href="../../stylesheets/bootstrap.min.css" rel="stylesheet" />
     <link href="../../stylesheets/font-awesome-4.6.1/css/font-awesome.min.css" rel="stylesheet" />
     <link href="../../stylesheets/app.css" rel="stylesheet" />
-    
+
 	  <script src="../../javascripts/jquery-1.10.2.min.js"></script>
 	  <script src="../../javascripts/bootstrap.min.js"></script>
 
@@ -73,12 +73,11 @@
 			<li><a href="/meetthestaff">Meet the Staff</a></li>
           </ul>
         </li>
-        <form class="navbar-form navbar-left" role="search">
+        <li>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
+            <gcse:searchbox-only resultsUrl="/searchResults"></gcse:searchbox-only>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
