--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <div class="container">
 
     <div class="jumbotron text-center" style="border-bottom: 0;">
-        <h1><span class="fa fa-car"></span> Angel's Auto Repair Shop</h1>
+        <h1><span class="fa fa-car"></span> My Auto Repair Shop</h1>
 
         <p>CALL TODAY TO SCHEDULE AN APPOINTMENT!
 			<br />
