--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include layout %>
 
-<div class="container">
+<div class="container" style="min-height: 500px;">
 
 <div class="col-sm-6 col-sm-offset-3">
 
@@ -33,3 +33,5 @@
 </div>
 
 </div>
+
+<% include footer %>
